--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93cca4">  <td>21/04/04 12:45:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WrapperClass.launchBrowser()[pri:0, instance:testCase.SAL57@553a3d88]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="93cca4">  <td>21/04/04 20:52:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WrapperClass.launchBrowser()[pri:0, instance:testCase.SAL22@553a3d88]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td>  <td>main@22805895</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/04/04 12:46:04</td>   <td>4477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL57.verifyAppleApp()[pri:0, instance:testCase.SAL57@553a3d88]">verifyAppleApp</td> 
+<tr bgcolor="96e697">  <td>21/04/04 20:53:03</td>   <td>4288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL22.sortDashboard()[pri:0, instance:testCase.SAL22@553a3d88]">sortDashboard</td> 
   <td>main@22805895</td>   <td></td> </tr>
 </table>
