--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93cca4">  <td>21/04/05 06:03:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WrapperClass.launchBrowser()[pri:0, instance:testCase.SAL81@553a3d88]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@22805895</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/04/05 06:03:08</td>   <td>4330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL81.uploadPDFTC()[pri:0, instance:testCase.SAL81@553a3d88]">uploadPDFTC</td> 
+<tr bgcolor="96e697">  <td>21/05/14 18:46:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SAL129.createNewPaymentGatewayLogs()[pri:0, instance:testCase.SAL129@553a3d88]">createNewPaymentGatewayLogs</td> 
   <td>main@22805895</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>21/05/14 18:46:00</td>   <td>-3593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WrapperClass.launchBrowser()[pri:0, instance:testCase.SAL129@553a3d88]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@22805895</td>   <td></td> </tr>
 </table>
